Fixed overlapping between cards.

--- a/src/css/layouts/_form-layout.scss
+++ b/src/css/layouts/_form-layout.scss
@@ -19,7 +19,7 @@ form {
 
         ul {
             display: grid; 
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
             gap: 10px;
             grid-auto-rows: minmax(100px, auto);
 
